feat: removed stripe billing and add razorpay
